[gd_scene load_steps=3 format=3 uid="uid://ctph8joortxmw"]

[ext_resource type="Script" path="res://scripts/player/slow_area.gd" id="1_drs0c"]

[sub_resource type="CircleShape2D" id="CircleShape2D_epgcd"]
radius = 200.0

[node name="SlowArea" type="Area2D"]
collision_layer = 2
collision_mask = 61
script = ExtResource("1_drs0c")

[node name="SlowAreaSprite" type="Sprite2D" parent="."]
modulate = Color(0.0901961, 1, 1, 0.156863)
position = Vector2(1.5, -5.00001)
scale = Vector2(3.5, 3.54)

[node name="SlowAreaShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_epgcd")
debug_color = Color(0.141176, 0.356863, 0.756863, 0.419608)

[node name="CyanParticles" type="CPUParticles2D" parent="."]
scale = Vector2(2, 2)
emitting = false
amount = 600
lifetime = 0.2
fixed_fps = 60
emission_shape = 1
emission_sphere_radius = 110.0
gravity = Vector2(0, 0)
color = Color(0.215686, 1, 1, 0.705882)

[node name="BlueParticles" type="CPUParticles2D" parent="."]
scale = Vector2(2, 2)
emitting = false
amount = 800
lifetime = 0.2
fixed_fps = 60
emission_shape = 1
emission_sphere_radius = 110.0
gravity = Vector2(0, 0)
color = Color(0.0784314, 0.423529, 1, 0.705882)

[node name="CooldownTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 5.0
one_shot = true

[node name="ActionTimer" type="Timer" parent="."]
unique_name_in_owner = true
process_callback = 0
wait_time = 4.0
one_shot = true
